<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp">

    <Button
        android:id="@+id/b1"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="249dp"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/b2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b1"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/b1"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/b3"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b2"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/b2"
        android:text="@string/btn3" />


    <Button
        android:id="@+id/b4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b3"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/b1"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/b5"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b4"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toStartOf="@id/b4"
        android:text="@string/btn5" />

    <Button
    android:id="@+id/b6"
    android:layout_width="70dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/b1"
    android:layout_marginStart="1dp"
    android:layout_marginTop="0dp"
    android:layout_toStartOf="@id/b5"
    android:text="@string/btn6" />

    <Button
        android:id="@+id/b7"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b6"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toStartOf="@id/b6"
        android:text="@string/btn7" />


    <Button
        android:id="@+id/b8"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/b7"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/b7"
        android:text="@string/btn8" />



</RelativeLayout>